--- a/index.html
+++ b/index.html
@@ -1256,12 +1256,12 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-content-start">
-            <div class="mr-2 mb-2"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener"><img src="/media/icons/brands/ms-logo.svg" width="56" height="56" alt="Microsoft Research Asia (MSRA)" loading="lazy"></a></div>
+            <div class="mr-2 mb-2"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener"><img src="/media/icons/brands/ms-logo.svg" width="56" height="56" alt="Microsoft" loading="lazy"></a></div>
             <div>
           
 
               <div class="section-subheading card-title exp-title text-muted my-0">Research Intern</div>
-              <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener">Microsoft Research Asia (MSRA)</a></div>
+              <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener">Microsoft</a></div>
               <div class="text-muted exp-meta">
                 April 2024 –
                 
