--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
     <strong>2024.05</strong>
       <img src="images/bat.png" alt="" width="25" height="25" style="margin-left: 5px">
       <span style="margin-left: 5px;">
-          <a href="https://arxiv.org/abs/2402.01591">BAT</a> was accepted by ICML 2024.
+          <a href="https://zhishengzheng.com/BAT">BAT</a> was accepted by ICML 2024.
     </span></div></li>
     <li><strong>2024.04</strong> <a href="https://arxiv.org/abs/2401.03497">EAT: Self-Supervised Pre-Training with Efficient Audio Transformer</a> was accepted by IJCAI 2024.</li>
     <li><strong>2023.12</strong> We release <a href="https://arxiv.org/abs/2312.15185">emotion2vec</a>, the first universal speech emotion model that excels across diverse emotional tasks, languages.</li>
