--- a/BAT/index.html
+++ b/BAT/index.html
@@ -103,7 +103,7 @@
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>BAT</span>
+                  <span>BAT (Coming Soon)</span>
                 </a>
               </span>
             </div>
