update resume and work experience

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 5, 2024 --><html lang="en-us" >
+<!-- Last Published: May 14, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1379,12 +1379,12 @@
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-content-start">
-            <div class="mr-2 mb-2"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener"><img src="/media/icons/brands/ms-logo.svg" width="56" height="56" alt="Microsoft" loading="lazy"></a></div>
+            <div class="mr-2 mb-2"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener"><img src="/media/icons/brands/ms-logo.svg" width="56" height="56" alt="Microsoft Research Asia" loading="lazy"></a></div>
             <div>
           
 
               <div class="section-subheading card-title exp-title text-muted my-0">Research Intern</div>
-              <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener">Microsoft</a></div>
+              <div class="section-subheading card-title exp-company text-muted my-0"><a href="https://www.microsoft.com/en-us/research/lab/microsoft-research-asia/" target="_blank" rel="noopener">Microsoft Research Asia</a></div>
               <div class="text-muted exp-meta">
                 April 2024 –
                 
