--- a/BAT/index.html
+++ b/BAT/index.html
@@ -103,7 +103,7 @@
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
-                  <span>BAT (Coming Soon)</span>
+                  <span>BAT</span>
                 </a>
               </span>
             </div>
@@ -193,7 +193,7 @@
                 </td>
               </tr>
               <tr>
-                  <td><strong>B:</strong> DP & DoA <br>(139K, 15.9%)</td>
+                  <td><strong>B:</strong> DoA & DP <br>(139K, 15.9%)</td>
                 <td>1</td>
                 <td>
                   <div style="text-align: left;">
@@ -213,7 +213,7 @@
                 </td>
               </tr>
               <tr>
-                  <td><strong>D:</strong> DP & DoA <br>(118K, 13.5%)</td>
+                  <td><strong>D:</strong> DoA & DP <br>(118K, 13.5%)</td>
                 <td>2</td>
                 <td>
                   <div style="text-align: left;">
