update personal status

--- a/project/external-project/index.html
+++ b/project/external-project/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 27, 2024 --><html lang="en-us" >
+<!-- Last Published: August 27, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1121,7 +1121,7 @@
     <div class="media-body">
       <h5 class="card-title"><a href="https://zhishengzheng.com/">Zhisheng Zheng</a></h5>
       <h6 class="card-subtitle">Ph.D. Student in Computer Science</h6>
-      <p class="card-text">Incoming Ph.D. student at UT-Austin.</p>
+      <p class="card-text">Ph.D. student at UT-Austin.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
@@ -1331,7 +1331,7 @@
   
 
 
-<script src="/js/vendor-bundle.min.ff7771056d34ad9f2de2d8f6a466e748.js"></script>
+<script src="/js/vendor-bundle.min.b2240102cb8b24bcbe037562ce2ea60a.js"></script>
 
 
 
