--- a/publication/chen2023front-end_adapter/index.html
+++ b/publication/chen2023front-end_adapter/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 27, 2024 --><html lang="en-us" >
+<!-- Last Published: August 27, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -1251,7 +1251,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
     <div class="media-body">
       <h5 class="card-title"><a href="https://zhishengzheng.com/">Zhisheng Zheng</a></h5>
       <h6 class="card-subtitle">Ph.D. Student in Computer Science</h6>
-      <p class="card-text">Incoming Ph.D. student at UT-Austin.</p>
+      <p class="card-text">Ph.D. student at UT-Austin.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
@@ -1446,7 +1446,7 @@ Supplementary notes can be added here, including [code, math, and images](https:
   
 
 
-<script src="/js/vendor-bundle.min.ff7771056d34ad9f2de2d8f6a466e748.js"></script>
+<script src="/js/vendor-bundle.min.b2240102cb8b24bcbe037562ce2ea60a.js"></script>
 
 
 
