--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: May 27, 2024 --><html lang="en-us" >
+<!-- Last Published: August 27, 2024 --><html lang="en-us" >
 
 
 <head>
@@ -318,7 +318,7 @@
 
   
 
-<meta name="description" content="An incoming Ph.D. student working on Speech, Audio and LLM." />
+<meta name="description" content="Ph.D. student at UT-Austin working on Speech, Audio and LLM." />
 
 
 
@@ -364,7 +364,7 @@
 <meta property="og:site_name" content="Zhisheng Zheng" />
 <meta property="og:url" content="https://zhishengzheng.com/404.html" />
 <meta property="og:title" content="404 Page not found | Zhisheng Zheng" />
-<meta property="og:description" content="An incoming Ph.D. student working on Speech, Audio and LLM." /><meta property="og:image" content="https://zhishengzheng.com/media/icon_hu977392f85b73bd77f194883392866898_93804_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="Ph.D. student at UT-Austin working on Speech, Audio and LLM." /><meta property="og:image" content="https://zhishengzheng.com/media/icon_hu977392f85b73bd77f194883392866898_93804_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
 
   
 
@@ -902,7 +902,7 @@
   
 
 
-<script src="/js/vendor-bundle.min.ff7771056d34ad9f2de2d8f6a466e748.js"></script>
+<script src="/js/vendor-bundle.min.b2240102cb8b24bcbe037562ce2ea60a.js"></script>
 
 
 
