--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: October 8, 2024 --><html lang="en-us" >
+<!-- Last Published: January 1, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -930,7 +930,7 @@
       
       <img class="avatar avatar-circle"
            width="270" height="270"
-           src="/authors/admin/avatar_hu01893c9bbbbb1d8e9f1d6767b425d09a_224958_270x270_fill_q75_lanczos_center.jpg" alt="Zhisheng Zheng">
+           src="/authors/admin/avatar_hucbda40f763a8d1abc96e3d8816c351d1_1311242_270x270_fill_q75_lanczos_center.jpeg" alt="Zhisheng Zheng">
       
 
       <div class="portrait-title">
@@ -1668,7 +1668,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 Zhisheng Zheng. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY NC ND 4.0</a>
+    © 2025 Zhisheng Zheng. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target="_blank" rel="noopener">CC BY NC ND 4.0</a>
   </p>
   
 
